--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,24 +1,23 @@
-name = "eduisat-ali" # todo
+name = "alibaba-isatedu" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-[[routes]]
-pattern = "edu1.crotjanda.filegear-sg.me"
+pattern = "alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "carrier.webex.com.edu1.crotjanda.filegear-sg.me"
+pattern = "carrier.webex.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.edu1.crotjanda.filegear-sg.me"
+pattern = "stage-7.duolingo.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.webex.com.edu1.crotjanda.filegear-sg.me"
+pattern = "api.webex.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.edu1.crotjanda.filegear-sg.me"
+pattern = "blog.webex.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 
 [vars]
