--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,25 +1,24 @@
-name = "alibaba-addon-xcl" # todo
+name = "alibaba-addonxcl" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "aliadd.taikuda.filegear-sg.me"
+pattern = "alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.aliadd.taikuda.crotjanda.filegear-sg.me"
+pattern = "ava.game.naver.com.alibaba.taikuda.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.aliadd.taikuda.filegear-sg.me"
+pattern = "quiz.int.vidio.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "investor.fb.com.aliadd.taikuda.filegear-sg.me"
+pattern = "investor.fb.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "graph.instagram.com.aliadd.taikuda.filegear-sg.me"
+pattern = "graph.instagram.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
-
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
