--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "alibaba-addonxcl" # todo
+name = "alibaba-addon-xcl" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -8,7 +8,7 @@ compatibility_date = "2023-05-26"
 pattern = "alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.alibaba.taikuda.crotjanda.filegear-sg.me"
+pattern = "ava.game.naver.com.alibaba.taikuda.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
 pattern = "quiz.int.vidio.com.alibaba.taikuda.filegear-sg.me"
