--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "alibaba-vidio" # todo
+name = "indo-vidio" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "alivid.taikuda.filegear-sg.me"
+pattern = "idvid.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email1.vidio.com.alivid.taikuda.filegear-sg.me"
+pattern = "img.email1.vidio.com.idvid.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email3.vidio.com.alivid.taikuda.filegear-sg.me"
+pattern = "img.email3.vidio.com.idvid.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.alivid.taikuda.filegear-sg.me"
+pattern = "quiz.vidio.com.idvid.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.alivid.taikuda.filegear-sg.me"
+pattern = "quiz.staging.vidio.com.idvid.taikuda.filegear-sg.me"
 custom_domain = true
 
 [vars]
