--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "indo-vidio" # todo
+name = "sg-addonxcl-alibaba" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "idvid.taikuda.filegear-sg.me"
+pattern = "alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email1.vidio.com.idvid.taikuda.filegear-sg.me"
+pattern = "ava.game.naver.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email3.vidio.com.idvid.taikuda.filegear-sg.me"
+pattern = "quiz.int.vidio.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.idvid.taikuda.filegear-sg.me"
+pattern = "investor.fb.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.idvid.taikuda.filegear-sg.me"
+pattern = "graph.instagram.com.alibaba.taikuda.filegear-sg.me"
 custom_domain = true
 
 [vars]
