--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,17 +1,26 @@
-name = "amz" # todo
+name = "sgbt" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "amz.bjhonstore.my.id"
+pattern = "sgbt.bjhonstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.amz.bjhonstore.my.id"
+pattern = "help.viu.com.sgbt.bjhonstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.amz.bjhonstore.my.id"
+pattern = "ava.game.naver.com.sgbt.bjhonstore.my.id"
+custom_domain = true
+[[routes]]
+pattern = "investor.fb.com.sgbt.bjhonstore.my.id"
+custom_domain = true
+[[routes]]
+pattern = "graph.facebook.com.sgbt.bjhonstore.my.id"
+custom_domain = true
+[[routes]]
+pattern = "connect.facebook.net.sgbt.bjhonstore.my.id"
 custom_domain = true
 
 [vars]
