--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,27 @@
-name = "indo" # todo
+name = "memek" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "indo.solovpn.cloud"
+custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.indo.solovpn.cloud"
+custom_domain = true
+[[routes]]
+pattern = "shopee.co.id.indo.solovpn.cloud"
+custom_domain = true
+[[routes]]
+pattern = "cf.shopee.co.id.indo.solovpn.cloud"
+custom_domain = true
+[[routes]]
+pattern = "cvs-deo.shopeemobile.com.indo.solovpn.cloud"
+custom_domain = true
+[[routes]]
+pattern = "api.zoom.us.indo.solovpn.cloud"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
