--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,13 +14,7 @@ custom_domain = true
 pattern = "ava.game.naver.com.sgbt.bjhonstore.my.id"
 custom_domain = true
 [[routes]]
-pattern = "investor.fb.com.sgbt.bjhonstore.my.id"
-custom_domain = true
-[[routes]]
-pattern = "graph.facebook.com.sgbt.bjhonstore.my.id"
-custom_domain = true
-[[routes]]
-pattern = "connect.facebook.net.sgbt.bjhonstore.my.id"
+pattern = "blog.webex.com.sgbt.bjhonstore.my.id"
 custom_domain = true
 
 [vars]
