--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg-linode" # todo
+name = "sg-digitalocean" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg.rezasenpai.xyz"
+pattern = "sgdo.rezasenpai.xyz"
 custom_domain = true
 [[routes]]
-pattern = "sb.scorecardresearch.com.sg.rezasenpai.xyz"
+pattern = "sb.scorecardresearch.com.sgdo.rezasenpai.xyz"
 custom_domain = true
 [[routes]]
-pattern = "click.axis.co.id.sg.rezasenpai.xyz"
+pattern = "click.axis.co.id.sgdo.rezasenpai.xyz"
 custom_domain = true
 [[routes]]
-pattern = "static-web.prod.vidiocdn.com.sg.rezasenpai.xyz"
+pattern = "static-web.prod.vidiocdn.com.sgdo.rezasenpai.xyz"
 custom_domain = true
 [[routesl]]
-pattern = "Nontontv.vidio.com.sg.rezasenpai.xyz"
+pattern = "Nontontv.vidio.com.sgdo.rezasenpai.xyz"
 custom_domain = true
 
 [vars]
