--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,21 @@ name = "indo" # todo
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "indo.mysant.my.id"
+custom_domain = true
+[[routes]]
+pattern = "df.game.naver.com.indo.mysant.my.id"
+custom_domain = true
+[[routes]]
+pattern = "ava.game.naver.com.indo.mysant.my.id"
+custom_domain = true
+[[routes]]
+pattern = "quiz.staging.vidio.com.indo.mysant.my.id"
+custom_domain = true
+[[routes]]
+pattern = "graph.instagram.com.indo.mysant.my.id"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +27,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "a2ec7cd4-019b-4813-b56c-4271669be8be"
+UUID = "da4d01fb-192c-412f-9ed5-ee5c246020b6"
