--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "indo" # todo
+name = "amazon1" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "indo.mysant.my.id"
+pattern = "mysant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.indo.mysant.my.id"
+pattern = "df.game.naver.com.amazon1.mysant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.indo.mysant.my.id"
+pattern = "ava.game.naver.com.amazon1.mysant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.indo.mysant.my.id"
+pattern = "quiz.staging.vidio.com.amazon1.mysant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "graph.instagram.com.indo.mysant.my.id"
+pattern = "api.instagram.com.amazon1.mysant.my.id"
 custom_domain = true
 
 [vars]
