--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,11 @@
-name = "oraclesg" # todo
+name = "alibabasg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgo.reinzvpn.my.id"
+pattern = "sgalb.reinzvpn.my.id"
 custom_domain = true
 
 [vars]
