--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,71 +1,68 @@
-name = "hkg" # todo
+name = "tut" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "hkg.tunneltech.filegear-sg.me"
+pattern = "tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.hkg.tunneltech.filegear-sg.me"
+pattern = "ava.game.naver.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.hkg.tunneltech.filegear-sg.me"
+pattern = "blog.webex.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.sushiroll.co.id.hkg.tunneltech.filegear-sg.me"
+pattern = "www.sushiroll.co.id.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "blog.sushiroll.co.id.hkg.tunneltech.filegear-sg.me"
+pattern = "blog.sushiroll.co.id.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "cdn.appsflyer.com.hkg.tunneltech.filegear-sg.me"
+pattern = "cdn.appsflyer.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "investor.fb.com.hkg.tunneltech.filegear-sg.me"
+pattern = "investor.fb.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "investor.spotify.com.hkg.tunneltech.filegear-sg.me"
+pattern = "investor.spotify.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.joox.com.hkg.tunneltech.filegear-sg.me"
+pattern = "www.joox.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.hkg.tunneltech.filegear-sg.me"
+pattern = "quiz.staging.vidio.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "zoomcares.zoom.us.hkg.tunneltech.filegear-sg.me"
+pattern = "zoomcares.zoom.us.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "graph.facebook.com.hkg.tunneltech.filegear-sg.me"
+pattern = "graph.facebook.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.help.tinder.com.hkg.tunneltech.filegear-sg.me"
+pattern = "www.help.tinder.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "104.16.51.111.hkg.tunneltech.filegear-sg.me"
+pattern = "poe.garena.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "poe.garena.com.hkg.tunneltech.filegear-sg.me"
+pattern = "games.axis.co.id.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "games.axis.co.id.hkg.tunneltech.filegear-sg.me"
+pattern = "api.ovo.id.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "api.ovo.id.hkg.tunneltech.filegear-sg.me"
+pattern = "h.facebook.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "www.udemy.com.hkg.tunneltech.filegear-sg.me"
+pattern = "104.26.6.171.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "104.26.6.171.hkg.tunneltech.filegear-sg.me"
+pattern = "app.gopay.co.id.tut.ngapaktunnelling.xyz"
 custom_domain = true
 [[routes]]
-pattern = "app.gopay.co.id.hkg.tunneltech.filegear-sg.me"
-custom_domain = true
-[[routes]]
-pattern = "go.appsflyer.com.hkg.tunneltech.filegear-sg.me"
+pattern = "go.appsflyer.com.tut.ngapaktunnelling.xyz"
 custom_domain = true
 
 [vars]
@@ -75,4 +72,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "9309b805-49fc-40f0-9591-1fb7b1948274"
+UUID = "4819b8b0-6a33-4c6c-8d33-c0947ecbe803"
