--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,19 +5,19 @@ name = "do" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "do.mzvpn.my.id"
+pattern = "do.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.do.mzvpn.my.id"
+pattern = "ava.game.naver.com.do.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.do.mzvpn.my.id"
+pattern = "blog.webex.com.do.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.do.mzvpn.my.id"
+pattern = "quiz.staging.vidio.com.do.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "suport.duolingo.com.do.mzvpn.my.id"
+pattern = "suport.duolingo.com.do.muhno.my.id"
 custom_domain = true
 
 [vars]
