--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "xnxx" # todo
+name = "xcl" # todo
 #name = "cf-worker-connect-test" # todop
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "cominetgratishoax.my.id"
+pattern = "patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.xnxx.cominetgratishoax.my.id"
+pattern = "ava.game.naver.com.xcl.patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.xnxx.cominetgratishoax.my.id"
+pattern = "df.game.naver.com.xcl.patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.xnxx.cominetgratishoax.my.id"
+pattern = "cvs-deo.shopeemobile.com.xcl.patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.xnxx.cominetgratishoax.my.id"
+pattern = "shopee.co.id.xcl.patunganvps.net"
 custom_domain = true
 
 [vars]
