--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,25 +5,22 @@ name = "indo" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern ="indo.xyoruz.my.id"
+pattern ="xyoru.xyz"
 custom_domain = true
 [[routes]]
-pattern ="ava.game.naver.com.indo.xyoruz.my.id"
+pattern ="ava.game.naver.com.xyoru.xyz"
 custom_domain = true
 [[routes]]
-pattern ="support.zoom.us.indo.xyoruz.my.id"
+pattern ="support.zoom.us.xyoru.xyz"
 custom_domain = true
 [[routes]]
-pattern ="zoomgov.socifiles.com.indo.xyoruz.my.id"
+pattern ="zoomgov.socifiles.com.xyoru.xyz"
 custom_domain = true
 [[routes]]
-pattern ="io.ruangguru.com.indo.xyoruz.my.id"
+pattern ="cvc-deo.shopeemobile.com.xyoru.xyz"
 custom_domain = true
 [[routes]]
-pattern ="email.udemy.com.indo.xyoruz.my.id"
-custom_domain = true
-[[routes]]
-pattern ="cvc-deo.shopeemobile.com.indo.xyoruz.my.id"
+pattern ="m.instagram.com.xyoru.xyz"
 custom_domain = true
 
 [vars]
