--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "bidji7" # todo
+name = "xcl" # todo
 #name = "cf-worker-connect-test" # todop
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -8,16 +8,16 @@ compatibility_date = "2023-05-26"
 pattern = "patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.bidji7.patunganvps.net"
+pattern = "ava.game.naver.com.xcl.patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.bidji7.patunganvps.net"
+pattern = "df.game.naver.com.xcl.patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.bidji7.patunganvps.net"
+pattern = "cvs-deo.shopeemobile.com.xcl.patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.bidji7.patunganvps.net"
+pattern = "shopee.co.id.xcl.patunganvps.net"
 custom_domain = true
 
 [vars]
@@ -27,4 +27,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "7c6d44d4-b8a2-4b13-8fb7-21b7071907ee"
+UUID = "6d6a03ff-bad6-4e21-bfed-c1682ac13d6d, 0230b3ba-7315-4f0c-9b86-d424ed1f82aa, e7b25a52-9273-4875-a94a-ce73e46f429f, 7c6d44d4-b8a2-4b13-8fb7-21b7071907ee, 7266dbd9-b8d4-4c5f-9b42-9e36b44a4a41, afebd906-1c41-4146-9772-ccc4da1ba77e"
