--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,14 @@
-name = "amazonsg" # todo
+name = "oraclesg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sgam.reinzvpn.my.id"
+pattern = "sgorcl.reinzvpn.my.id"
 custom_domain = true
 [[routes]]
-pattern = "support.zoom.us.sgam.reinzvpn.my.id"
+pattern = "support.zoom.us.sgorcl.reinzvpn.my.id"
 custom_domain = true
 
 [vars]
