--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "xcl" # todo
+name = "jembut" # todo
 #name = "cf-worker-connect-test" # todop
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
@@ -8,16 +8,16 @@ compatibility_date = "2023-05-26"
 pattern = "patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.xcl.patunganvps.net"
+pattern = "ava.game.naver.com.jembut.patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.xcl.patunganvps.net"
+pattern = "df.game.naver.com.jembut.patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.xcl.patunganvps.net"
+pattern = "cvs-deo.shopeemobile.com.jembut.patunganvps.net"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.xcl.patunganvps.net"
+pattern = "shopee.co.id.jembut.patunganvps.net"
 custom_domain = true
 
 [vars]
