--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "jembut" # todo
+name = "riilcuy" # todo
 #name = "cf-worker-connect-test" # todop
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "patunganvps.net"
+pattern = "edycintajeki.cloud"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.jembut.patunganvps.net"
+pattern = "ava.game.naver.com.riilcuy.edycintajeki.cloud"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.jembut.patunganvps.net"
+pattern = "df.game.naver.com.riilcuy.edycintajeki.cloud"
 custom_domain = true
 [[routes]]
-pattern = "cvs-deo.shopeemobile.com.jembut.patunganvps.net"
+pattern = "cvs-deo.shopeemobile.com.riilcuy.edycintajeki.cloud"
 custom_domain = true
 [[routes]]
-pattern = "shopee.co.id.jembut.patunganvps.net"
+pattern = "shopee.co.id.riilcuy.edycintajeki.cloud"
 custom_domain = true
 
 [vars]
