--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "do" # todo
+name = "vip" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "do.muhnovip.my.id"
+pattern = "vip.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.do.muhnovip.my.id"
+pattern = "ava.game.naver.com.vip.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.do.muhnovip.my.id"
+pattern = "blog.webex.com.vip.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.do.muhnovip.my.id"
+pattern = "quiz.staging.vidio.com.vip.muhnov.my.id"
 custom_domain = true
 [[routes]]
-pattern = "suport.duolingo.com.do.muhnovip.my.id"
+pattern = "suport.duolingo.com.vip.muhno.my.id"
 custom_domain = true
 
 [vars]
