--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,7 +14,7 @@ custom_domain = true
 pattern = "blog.webex.com.vip.muhno.my.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.vip.muhnov.my.id"
+pattern = "quiz.staging.vidio.com.vip.muhno.my.id"
 custom_domain = true
 [[routes]]
 pattern = "suport.duolingo.com.vip.muhno.my.id"
@@ -27,4 +27,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "22da6422-e755-4401-9f60-b61fd39977ed"
+UUID = "c87d4795-af60-46b9-87ce-7f754bdc9c0f"
