--- a/wrangler.toml
+++ b/wrangler.toml
@@ -27,4 +27,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "afebd906-1c41-4146-9772-ccc4da1ba77e, 7266dbd9-b8d4-4c5f-9b42-9e36b44a4a41, 0230b3ba-7315-4f0c-9b86-d424ed1f82aa, 02dc2b26-26f7-4054-bda4-68c72bc4ff07, 6d6a03ff-bad6-4e21-bfed-c1682ac13d6d"
+UUID = "afebd906-1c41-4146-9772-ccc4da1ba77e, 7266dbd9-b8d4-4c5f-9b42-9e36b44a4a41, 0230b3ba-7315-4f0c-9b86-d424ed1f82aa, 02dc2b26-26f7-4054-bda4-68c72bc4ff07, 6d6a03ff-bad6-4e21-bfed-c1682ac13d6d, adb75682-abc4-4b09-b791-6704578080f5"
