--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,27 +1,28 @@
-name = "Vless-SyarifahSatya" # todo
+name = "VlessGratis-SyarifahSatya" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+
 [[routes]]
-pattern "indo.syarifahsatya.biz.id"
+pattern = "indo.syarifahsatya.biz.id"
 custom domain true
 [[routes]]
-pattern "shopee.co.id.indo.syarifahsatya.biz.id
+pattern = "shopee.co.id.indo.syarifahsatya.biz.id"
 custom domain = true
 [[routes]]
-pattern "cf.shopee.co.id.indo.syarifahsatya.biz.id"
+pattern = "cf.shopee.co.id.indo.syarifahsatya.biz.id"
 custom domain true
 [[routes]]
-pattern "cv.shopee.sg.indo.syarifahsatya.biz.id"
+pattern = "cv.shopee.sg.indo.syarifahsatya.biz.id"
 custom_domain= true
 [[routes]]
-pattern "cvs-deo.shopeemobile.com.indo.syarifahsatya.biz.id
+pattern = "cvs-deo.shopeemobile.com.indo.syarifahsatya.biz.id
 custom_domain true
 
 [vars]
-# UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
+# UUID = "aa7da8e7-0d97-4b24-ad1d-bcbc9e227144"
 # PROXYIP = "1.2.3.4"
 # DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
 # NODE_ID = "1"
