--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,13 +7,13 @@ compatibility_date = "2023-05-26"
 
 [[routes]]
 pattern = "indo.syarifahsatya.biz.id"
-custom domain true
+custom_domain true
 [[routes]]
 pattern = "shopee.co.id.indo.syarifahsatya.biz.id"
-custom domain = true
+custom_domain = true
 [[routes]]
 pattern = "cf.shopee.co.id.indo.syarifahsatya.biz.id"
-custom domain true
+custom_domain true
 [[routes]]
 pattern = "cv.shopee.sg.indo.syarifahsatya.biz.id"
 custom_domain= true
